--- a/config/crd/bases/myapp.example.com_myappresources.yaml
+++ b/config/crd/bases/myapp.example.com_myappresources.yaml
@@ -46,19 +46,19 @@ spec:
                   enabled:
                     type: boolean
                 type: object
-              replica_count:
+              replicaCount:
                 format: int32
                 type: integer
               resources:
                 description: could use a resource list here
                 properties:
-                  cpu_request:
+                  cpuRequest:
                     anyOf:
                     - type: integer
                     - type: string
                     pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                     x-kubernetes-int-or-string: true
-                  memory_limit:
+                  memoryLimit:
                     anyOf:
                     - type: integer
                     - type: string
