--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -98,5 +98,6 @@ spec:
           requests:
             cpu: 10m
             memory: 64Mi
+        imagePullPolicy: IfNotPresent
       serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
