--- a/config/samples/myapp_v1alpha1_myappresource.yaml
+++ b/config/samples/myapp_v1alpha1_myappresource.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name:  myapp
+---
 apiVersion: myapp.example.com/v1alpha1
 kind: MyAppResource
 metadata:
@@ -8,6 +13,7 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: myapp-operator
   name: myappresource-sample
+  namespace: myapp
 spec:
   replicaCount: 2
   resources:
