--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -68,8 +68,8 @@ spec:
       containers:
       - command:
         - /manager
-        args:
-        - --leader-elect
+        # args:
+        # - --leader-elect
         image: controller:latest
         name: manager
         securityContext:
