--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,6 +5,28 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - create
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - services
+  verbs:
+  - create
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - myapp.example.com
   resources:
   - myappresources
@@ -16,12 +38,6 @@ rules:
   - patch
   - update
   - watch
-- apiGroups:
-  - myapp.example.com
-  resources:
-  - myappresources/finalizers
-  verbs:
-  - update
 - apiGroups:
   - myapp.example.com
   resources:
